--- a/BIT607-AS2-SkyReekie-WebApplication/HTML/index.html
+++ b/BIT607-AS2-SkyReekie-WebApplication/HTML/index.html
@@ -17,13 +17,16 @@
                 </a>
             </div>
 
-            <nav>
+            <nav id="navbar">
                 <a href="../HTML/index.html">Home</a>
                 <a href="../HTML/menu.html">Dinner Menu</a>
                 <a href="../HTML/reservations.html">Reservations</a>
                 <a href="../HTML/recipes.html">Recipes</a>
                 <a href="../HTML/contact.html">About Us</a>
             </nav>
+            <div class="mobile-menu-icon" onclick="toggleMenu()">
+                ☰
+            </div>
         </div>
     </header>
 
